--- a/package.json
+++ b/package.json
@@ -2,21 +2,10 @@
   "name": "ekkelbound",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dcamere/ekkelbound.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dcamere/ekkelbound/issues"
-  },
-  "homepage": "https://github.com/dcamere/ekkelbound#readme",
   "dependencies": {
     "express": "^5.1.0",
     "socket.io": "^4.8.1"
